Adding code to debug resources

--- a/App/Randomizer/App.xaml
+++ b/App/Randomizer/App.xaml
@@ -10,6 +10,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <Controls:Themes />
                 <Controls:Templates />
+                <Controls:Icons />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
 
