Using SVG everywhere

--- a/App/Randomizer/App.xaml
+++ b/App/Randomizer/App.xaml
@@ -11,6 +11,7 @@
                 <Controls:Themes />
                 <Controls:Templates />
                 <Controls:Icons />
+                <Controls:GenericControls />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
 
