--- a/Controls Gallery/ControlsGallery/ControlsGallery/MainPage.xaml
+++ b/Controls Gallery/ControlsGallery/ControlsGallery/MainPage.xaml
@@ -6,6 +6,7 @@
     xmlns:cards="clr-namespace:PanCardView;assembly=PanCardView"
     xmlns:controls="clr-namespace:EnigmatiKreations.Framework.Controls;assembly=EnigmatiKreations.Framework.Controls"
     xmlns:floating="clr-namespace:EnigmatiKreations.Framework.Controls.Floating;assembly=EnigmatiKreations.Framework.Controls"
+    xmlns:patchNine="clr-namespace:Forms9Patch;assembly=Forms9Patch"
     xmlns:svg="clr-namespace:Xamarin.Forms.Svg;assembly=SvgImageSource"
     xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
     x:Name="this"
@@ -93,6 +94,8 @@
                                 Color="White" />
                         </Image.Source>
                     </Image>
+
+
                 </x:Array>
             </cards:CarouselView.ItemsSource>
 
